# scene_segmentation_pillar

./: .gitignore  CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
launch/: scene_segmentation.launch  scene_segmentation_launch.py
nodes/: scene_segmentation_node.py
scene_segmentation_pillar/: scene_segmentation.py  scene_segmentation_node.py
scripts/: demo.py  scene_segmentation.py
