<?xml version="1.0"?>
<package format="3">
  <name>scene_segmentation_pillar</name>
  <version>1.0.0</version>
  <description>The scene_segmentation_pillar package</description>

  <maintainer email="pfilntisis@athenarc.gr">Panagiotis P. Filntisis</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
